test/errors/undefined_variable.correct
error: undefined_variable.li:3:7: 'undefined_variable' is not defined
│ print(undefined_variable);
│       ~~~~~~~~~~~~~~~~~~
│       ^
